force-app/main/default/objects/AIExecutionStep__c/AIExecutionStep__c.object-meta.xml
<CustomObject>
    <description>Records each individual step the orchestrator performs while processing a single message, prompt assembly, template selection, data source calls, workflow action suggestions,  giving a full behind-the-scenes trace for debugging, transparency, and performance analysis.</description>
    <label>AI Execution Step</label>
    <nameField>
        <displayFormat>AI Step - {00000}</displayFormat>
        <label>AI Execution Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>🔍 AI Execution Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>