force-app/main/default/objects/AIExecutionStep__c/fields/AIConversationMessage__c.field-meta.xml
<CustomField>
    <fullName>AIConversationMessage__c</fullName>
    <description>The message this execution step was part of producing.</description>
    <inlineHelpText>Deleted automatically if the parent message is deleted.</inlineHelpText>
    <label>AI Conversation Message</label>
    <referenceTo>AIConversationMessage__c</referenceTo>
    <relationshipLabel>AI Execution Steps</relationshipLabel>
    <relationshipName>AIExecutionSteps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>