force-app/main/default/objects/AIExecutionStep__c/fields/AIDataSource__c.field-meta.xml
<CustomField>
    <fullName>AIDataSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The data source involved, if this step was a data source call.</description>
    <inlineHelpText>Left blank if this step wasn&apos;t a data source call.</inlineHelpText>
    <label>AI Data Source</label>
    <referenceTo>AIDataSource__c</referenceTo>
    <relationshipLabel>AI Execution Steps</relationshipLabel>
    <relationshipName>AIExecutionSteps</relationshipName>
    <type>Lookup</type>
</CustomField>