force-app/main/default/objects/AIExecutionStep__c/fields/AIWorkflowAction__c.field-meta.xml
<CustomField>
    <fullName>AIWorkflowAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The workflow action involved, if this step was an action suggestion.</description>
    <inlineHelpText>Left blank if this step wasn&apos;t a workflow action suggestion.</inlineHelpText>
    <label>AI Workflow Action</label>
    <referenceTo>AIWorkflowAction__c</referenceTo>
    <relationshipLabel>AI Execution Steps</relationshipLabel>
    <relationshipName>AIExecutionSteps</relationshipName>
    <type>Lookup</type>
</CustomField>