force-app/main/default/objects/AIExecutionStep__c/fields/AttemptNumber__c.field-meta.xml
<CustomField>
    <fullName>AttemptNumber__c</fullName>
    <description>Which attempt succeeded (1 for the first try; higher when earlier attempts failed with a retryable callout error and AiMessageProcessingFinalizer scheduled a retry) - the same value on every step of that reply.</description>
    <inlineHelpText>Set on every step of a reply, not just the last one - simpler to read back than a single summary row.</inlineHelpText>
    <label>Attempt Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>