force-app/main/default/objects/AIExecutionStep__c/fields/DurationMilliseconds__c.field-meta.xml
<CustomField>
    <fullName>DurationMilliseconds__c</fullName>
    <description>How long this step took, in milliseconds. Left blank for steps that aren&apos;t timed (e.g. a Suggested Action the user ran).</description>
    <inlineHelpText>Set automatically by AIAgentTurnTrace for a data source read or provider callout - the Debug Trace&apos;s per-step timing.</inlineHelpText>
    <label>Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>