force-app/main/default/objects/AIExecutionStep__c/fields/RequestJson__c.field-meta.xml
<CustomField>
    <fullName>RequestJson__c</fullName>
    <description>Only set on a "Provider callout" step - the exact JSON body of that callout, already pseudonymised, since it's built from the same masked values sent to the provider.</description>
    <inlineHelpText>Left blank for a data source step. Only captured when the running user has AIUserSettings__c.DebugModeEnabled__c, to avoid the storage cost for everyone else.</inlineHelpText>
    <label>Request JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>