force-app/main/default/objects/AIExecutionStep__c/fields/ResponseJson__c.field-meta.xml
<CustomField>
    <fullName>ResponseJson__c</fullName>
    <description>Only set on a "Provider callout" step - the raw HTTP response body the AI provider returned for that callout.</description>
    <inlineHelpText>Left blank for a data source step. Only captured when the running user has AIUserSettings__c.DebugModeEnabled__c, to avoid the storage cost for everyone else.</inlineHelpText>
    <label>Response JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>