force-app/main/default/objects/AIExecutionStep__c/fields/SentPreviewText__c.field-meta.xml
<CustomField>
    <fullName>SentPreviewText__c</fullName>
    <description>Only set on a "Provider callout" step - a short excerpt of the newest user-role message actually sent on that callout, already pseudonymised (e.g. showing ‹PERSON_1› in place of a name).</description>
    <inlineHelpText>Truncated - a preview, not the full request. See Request JSON for that. Only captured when the running user has AIUserSettings__c.DebugModeEnabled__c.</inlineHelpText>
    <label>Sent Preview Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>