force-app/main/default/objects/AIExecutionStep__c/fields/StepDetail__c.field-meta.xml
<CustomField>
    <fullName>StepDetail__c</fullName>
    <description>The specifics of what happened at this step, which template was selected and why, which data source was called with what inputs, what it returned.</description>
    <inlineHelpText>Records enough detail to reconstruct exactly what the orchestrator did at this step, for debugging or review.</inlineHelpText>
    <label>Step Detail</label>
    <type>TextArea</type>
</CustomField>