force-app/main/default/objects/AIExecutionStep__c/fields/StepOrder__c.field-meta.xml
<CustomField>
    <fullName>StepOrder__c</fullName>
    <description>The sequence position of this step within the overall processing of the message.</description>
    <inlineHelpText>Used to reconstruct the order steps occurred in, from prompt assembly through to final response.</inlineHelpText>
    <label>Step Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>