force-app/main/default/objects/AIExecutionStep__c/fields/ToolCallingIterationsMax__c.field-meta.xml
<CustomField>
    <fullName>ToolCallingIterationsMax__c</fullName>
    <description>The resolved cap on tool-calling iterations for the reply this step is part of (AIAgent__c.MaxToolCallingIterations__c, or the org default, clamped to AIAssistSettingsService&apos;s cap) - stored alongside ToolCallingIterationsUsed__c so the trace stays accurate even if that setting changes later.</description>
    <inlineHelpText>Set on every step of a reply, not just the last one - simpler to read back than a single summary row.</inlineHelpText>
    <label>Tool Calling Iterations Max</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>