force-app/main/default/objects/AIExecutionStep__c/fields/ToolCallingIterationsUsed__c.field-meta.xml
<CustomField>
    <fullName>ToolCallingIterationsUsed__c</fullName>
    <description>How many tool-calling iterations AIAgentManager ran to produce the reply this step is part of - the same value on every step of that reply.</description>
    <inlineHelpText>Set on every step of a reply, not just the last one - simpler to read back than a single summary row.</inlineHelpText>
    <label>Tool Calling Iterations Used</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>